Add synchronization button for spreadsheet
Added a button to synchronize with spreadsheet.

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <button onclick="abrirModal('fornecedor')">+ Novo Fornecedor</button>
       <button onclick="exportarCSV()">⬇ Exportar CSV</button>
       <button onclick="window.print()">📄 Imprimir</button>
+      <button onclick="carregarDaPlanilha()">🔄 Sincronizar com Planilha</button>
     </section>
 
     <section class="filtro">
@@ -74,4 +75,5 @@
 
   <script src="script.js"></script>
 </body>
+
 </html>
